fixed a width issue on smaller screens

--- a/styles/sass/partials/_section.scss
+++ b/styles/sass/partials/_section.scss
@@ -35,6 +35,7 @@ section {
         align-items: center;
         justify-content: space-between;
         min-height: 100%;
+        min-width: 100%;
     }
 
     h3 {
