--- a/styles/styles.css
+++ b/styles/styles.css
@@ -519,6 +519,7 @@ section.intro {
       -ms-flex-pack: justify;
           justify-content: space-between;
   min-height: 100%;
+  min-width: 100%;
 }
 .results h3 {
   text-align: center;
